--- a/index.html
+++ b/index.html
@@ -3,9 +3,70 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <h>This is an example project</h>
+    <header class="header">
+      <div class="container header-container">
+        <nav class="header-nav">
+          <a class="header-logo" href="./index.html"
+            ><img class="icon-logo" src="./images/logo.svg" alt="logo"
+          /></a>
+          <ul class="header-nav-list">
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="#about">Про нас</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="#advantages">Переваги</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="#assortment">Асортимент</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="#gallery">Галерея</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="#feedbacks">Відгуки</a>
+            </li>
+            <li class="header-nav-item">
+              <a class="header-nav-link" href="#support">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <address class="header-address">
+          <ul class="header-address-list">
+            <li class="header-address-item">
+              <a class="header-address-link" href="tel:+380999091122"
+                >+38 (099) 909 11 22</a
+              >
+            </li>
+            <li class="header-address-item">
+              <a class="header-address-link" href="mailto:hello@ecotote.com"
+                >hello@ecotote.com</a
+              >
+            </li>
+          </ul>
+        </address>
+        <button class="menu-btn" type="button">
+          <svg class="icon-menu">
+            <use href="/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
+      </div>
+    </header>
   </body>
 </html>
