--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </address>
         <button class="menu-btn" type="button">
           <svg class="icon-menu">
-            <use href="/icons.svg#icon-menu"></use>
+            <use href="./icons.svg#icon-menu"></use>
           </svg>
         </button>
       </div>
